src/objects/PSA_Conga__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Setting Used by Conga</description>
    <fields>
        <fullName>Adjustments_Query_Id__c</fullName>
        <description>Salesforce Id of the Conga Adjustments Query - needed for formula field with list of queries to use</description>
        <inlineHelpText>Salesforce Id of the Conga Adjustments Query - needed for formula field with list of queries to use</inlineHelpText>
        <label>Adjustments Query Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustments_Template_Id__c</fullName>
        <description>Salesforce Id of the Conga Adjustments Template - needed for formula field with list of queries to use</description>
        <inlineHelpText>Salesforce Id of the Conga Adjustments Template - needed for formula field with list of queries to use</inlineHelpText>
        <label>Adjustments Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Query_Id__c</fullName>
        <label>Bill To Query Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Query_Id__c</fullName>
        <label>Customer Query Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Query_Id__c</fullName>
        <label>Daily Query Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Template_Credit_Holdback_ID__c</fullName>
        <label>Daily Template Credit Holdback ID</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Template_Credit_ID__c</fullName>
        <label>Daily Template Credit ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Template_Holdback_ID__c</fullName>
        <label>Daily Template Holdback ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Template_Id__c</fullName>
        <label>Daily Template Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Template_XLS_Id__c</fullName>
        <description>Used by conga for the daily XLS template</description>
        <label>Daily Template XLS Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expenses_Query_Id__c</fullName>
        <label>Expenses Query Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expenses_Template_Id__c</fullName>
        <label>Expenses Template Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expenses_Template_XLS_Id__c</fullName>
        <label>Expenses Template XLS Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flat_Expenses_Query_ID__c</fullName>
        <label>Flat Expenses Query ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flat_Expenses_Template__c</fullName>
        <label>Flat Expenses Template ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Query_Id__c</fullName>
        <label>Monthly Query Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Template_Id__c</fullName>
        <label>Monthly Template Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preview_Query_Id__c</fullName>
        <label>Preview Query Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preview_Template_Id__c</fullName>
        <label>Preview Template Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Query_Id__c</fullName>
        <label>Ship To Query Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekly_Credit_Template__c</fullName>
        <label>Weekly Credit Template ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekly_Holdback_Template_ID__c</fullName>
        <label>Weekly Holdback Template ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekly_Query_Id__c</fullName>
        <label>Weekly Query Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekly_Template_Credit_Holdback_ID__c</fullName>
        <label>Weekly Template Credit Holdback ID</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekly_Template_Id__c</fullName>
        <label>Weekly Template Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <label>PSA Conga</label>
</CustomObject>